--- a/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Advogados/Index.cshtml
+++ b/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Advogados/Index.cshtml
@@ -79,5 +79,6 @@
                 </td>
             </tr>
         }
+        <a class="btn btn-secondary text-dark" asp-area="" asp-controller="Advogados" asp-action="GerarRelatorio">Gerar Relatório</a>
     </tbody>
 </table>
