--- a/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Clientes/Index.cshtml
+++ b/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Clientes/Index.cshtml
@@ -72,5 +72,6 @@
                 </td>
             </tr>
         }
+        <a class="btn btn-secondary text-dark" asp-area="" asp-controller="Clientes" asp-action="GerarRelatorio">Gerar Relatório</a>
     </tbody>
 </table>
