--- a/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Emprestimos/Index.cshtml
+++ b/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Emprestimos/Index.cshtml
@@ -47,5 +47,6 @@
                 </td>
             </tr>
         }
+        <a class="btn btn-secondary text-dark" asp-area="" asp-controller="Emprestimos" asp-action="GerarRelatorio">Gerar Relatório</a>
     </tbody>
 </table>
