--- a/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Estagiarios/Index.cshtml
+++ b/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Estagiarios/Index.cshtml
@@ -78,5 +78,6 @@
                 </td>
             </tr>
         }
+        <a class="btn btn-secondary text-dark" asp-area="" asp-controller="Estagiarios" asp-action="GerarRelatorio">Gerar Relatório</a>
     </tbody>
 </table>
