--- a/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Livros/Index.cshtml
+++ b/AdvocaciaPPFinal/AdvocaciaPPFinal/Views/Livros/Index.cshtml
@@ -73,5 +73,6 @@
                 </td>
             </tr>
         }
+        <a class="btn btn-secondary text-dark" asp-area="" asp-controller="Livros" asp-action="GerarRelatorio">Gerar Relatório</a>
     </tbody>
 </table>
